# cope

./: README.md  pyproject.toml
cope/: __init__.py  fileprocessor.py  metadatarepository.py  namematchers.py  processfunctions.py  provenancetracker.py
cope/iterators/: __init__.py  directorytree.py  treewalk.py
tests/: FileProcessorTests.py  NameMatcherTests.py  ProcessFunctionTests.py  ProvenanceTrackerTests.py  helpers.py
tests/iterators/: DirectoryTreeIteratorTests.py  TreeWalkIteratorTests.py
